# msp-boxes

./: .gitignore  LICENSE  Makefile  README  README.md  configure.ac
src/: Makefile  Makefile.am
src/boxes/: Makefile  Makefile.am  greedy.cpp  greedy.hpp  main_boxes_greedy_nbox_ic_wdiag_kernel.cpp
src/ordering/: Makefile  Makefile.am  ordering-annealing.cpp  ordering-annealing.hpp  ordering-exhaustive.cpp  ordering-io.cpp  ordering-io.hpp  ordering-kernel-orig  ordering-kernel.cpp  ordering-templated.cpp  ordering-templated.hpp  ordering-tools.cpp  ordering-tools.hpp
test/: Makefile  Makefile.in
