
bin_PROGRAMS=ordering-exhaustive ordering-kernel

ordering_exhaustive_SOURCES=ordering-exhaustive.cpp \
						    ordering-annealing.hpp ordering-annealing.cpp \
						    ordering-io.hpp ordering-io.cpp \
						    ordering-tools.hpp ordering-tools.cpp \
						    ordering-templated.hpp

ordering_kernel_SOURCES=ordering-kernel.cpp \
					    ordering-annealing.hpp ordering-annealing.cpp \
					    ordering-io.hpp ordering-io.cpp \
					    ordering-tools.hpp ordering-tools.cpp \
					    ordering-templated.hpp
